fixed whitespace issue

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -6,6 +6,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+:root {
+  /* --primary-color: #3498db;
+  --secondary-color: #2ecc71;
+  --font-size: 16px; */
+ 
+  --header-height: 3rem;
+}
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -73,12 +82,18 @@ body {
   }
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 .header {
   position: fixed; /* Position the header over the background */
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.0); /* Translucent background */
+  background-color: rgba(0, 0, 0, 0.3); /* Translucent background */
   color: var(--primary-foreground);
   display: flex;
   justify-content: space-between;
@@ -87,13 +102,13 @@ body {
 }
 
 .dashboard-content {
-  margin-top: 4rem; /* Ensure the content is below the header */
+  margin-top: var(--header-height); /* Ensure the content is below the header */
   padding: 1rem;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - var(--header-height));
   overflow: auto;
 }
 
